--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,10 +6,10 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
-  theme_night: minimal
+  theme_day: mr_robot
+  theme_night: mr_robot
   font: minimal
-  font_size: L
+  font_size: S
 
 # SEO
 
